welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:18: error: ';' expected but ',' found.
return min,max
          ^