welcome.lessons.welcome.array.maxvalue.Extrema.scala.code
def extrema(nums:Array[Int]): Int =
{
var maximum=0
var minimum=0

	for(i<-0 to (nums.length-1))
	{
		if(nums(i)<min)
		{
			minimum=nums(i)
		}

		if(nums(i)>max)
		{
			maximum=nums(i)
		}
	}
return min,max
}